# barbacane

./: .coderabbit.yaml  .dockerignore  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE  COMPANY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.control  Dockerfile.standalone  LICENSE  LICENSING.md  MILESTONES.md  Makefile  PRODUCT.md  README.md  ROADMAP.md  TRADEMARKS.md  book.toml  deny.toml  docker-compose.yml
.cargo/: audit.toml
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
adr/: 0001-use-adr-for-architecture-decisions.md  0003-project-naming.md  0004-spec-driven-configuration.md  0005-proxy-framework.md  0006-wasm-plugin-architecture.md  0007-control-data-plane-separation.md  0008-dispatch-plugin-interface.md  0010-observability.md  0011-spec-compilation-model.md  0012-error-model.md  0013-multi-tenancy.md  0014-testing-strategy.md  0015-api-versioning-lifecycle.md  0016-plugin-development-contract.md  0017-repository-architecture.md  0019-packaging-and-release-strategy.md  (+13 more)
crates/barbacane/: Cargo.toml
crates/barbacane-compiler/: Cargo.toml
crates/barbacane-compiler/benches/: compilation.rs
crates/barbacane-compiler/src/: artifact.rs  cache.rs  download.rs  error.rs  lib.rs  manifest.rs
crates/barbacane-compiler/src/spec_parser/: error.rs  mod.rs  model.rs  parser.rs
crates/barbacane-control/: Cargo.toml  openapi.yaml
crates/barbacane-control/migrations/: 001_initial_schema.sql  002_add_projects.sql  003_add_data_planes.sql  004_add_drift_detection.sql
crates/barbacane-control/src/: error.rs  main.rs  server.rs
crates/barbacane-control/src/api/: api_keys.rs  artifacts.rs  auth.rs  compilations.rs  data_planes.rs  health.rs  init.rs  mod.rs  multipart.rs  operations.rs  plugins.rs  project_plugins.rs  projects.rs  router.rs  specs.rs  tests.rs
crates/barbacane-control/src/api/ws/: handler.rs  manager.rs  mod.rs  protocol.rs
crates/barbacane-control/src/compiler/: mod.rs  worker.rs
crates/barbacane-control/src/db/: api_keys.rs  artifacts.rs  compilations.rs  data_planes.rs  mod.rs  models.rs  plugins.rs  pool.rs  project_plugins.rs  projects.rs  specs.rs
crates/barbacane-plugin-macros/: Cargo.toml
crates/barbacane-plugin-macros/src/: lib.rs
crates/barbacane-plugin-sdk/: Cargo.toml
crates/barbacane-plugin-sdk/src/: body.rs  errors.rs  http.rs  jwt.rs  lib.rs  log.rs  types.rs
crates/barbacane-router/: Cargo.toml
crates/barbacane-router/benches/: routing.rs
crates/barbacane-router/src/: lib.rs  trie.rs
crates/barbacane-sigv4/: Cargo.toml
crates/barbacane-sigv4/src/: lib.rs
crates/barbacane-spec-parser/: Cargo.toml
crates/barbacane-spec-parser/src/: lib.rs  model.rs  parser.rs
crates/barbacane-telemetry/: Cargo.toml
crates/barbacane-telemetry/src/: config.rs  export.rs  lib.rs  logging.rs  metrics.rs  prometheus.rs  tracing.rs
crates/barbacane-test/: Cargo.toml  SECURITY-TESTING.md  build.rs
crates/barbacane-test/src/: cli.rs  gateway.rs  lib.rs
crates/barbacane-test/tests/: access_control.rs  admin.rs  ai_gateway.rs  ai_proxy.rs  auth.rs  cache.rs  compilation.rs  events.rs  lifecycle.rs  mcp.rs  plugins.rs  proxy.rs  rate_limit.rs  routing.rs  security.rs  specs.rs  streaming.rs  telemetry.rs  validation.rs  workload.rs
crates/barbacane-test/tests/security/: artifact_integrity.rs  authz.rs  crypto_auth.rs  dos.rs  sandbox.rs  ssrf.rs
crates/barbacane-validator/: Cargo.toml
crates/barbacane-validator/benches/: validation.rs
crates/barbacane-validator/src/: lib.rs
crates/barbacane-wasm/: Cargo.toml
crates/barbacane-wasm/benches/: serialization.rs  wasm.rs
crates/barbacane-wasm/src/: body_access.rs  broker.rs  cache.rs  chain.rs  circuit_breaker.rs  crypto.rs  engine.rs  error.rs  http_client.rs  instance.rs  kafka_client.rs  lib.rs  limits.rs  manifest.rs  nats_client.rs  pool.rs  rate_limiter.rs  schema.rs  secrets.rs  serde_compat.rs  trap.rs  validate.rs  version.rs  ws_client.rs
crates/barbacane-wasm/src/host/: mod.rs
crates/barbacane/benches/: routing.rs  validation.rs
crates/barbacane/src/: admin.rs  control_plane.rs  dev.rs  hot_reload.rs  lib.rs  main.rs  validator.rs
crates/barbacane/src/mcp/: jsonrpc.rs  mod.rs  session.rs  tools.rs
crates/barbacane/src/router/: mod.rs  trie.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: artifact_loader.rs  jsonrpc.rs  spec_parser.rs  validator.rs  wasm_host_memory.rs
plugins/ai-cost-tracker/: Cargo.toml  config-schema.json  plugin.toml
plugins/ai-cost-tracker/src/: lib.rs
plugins/ai-prompt-guard/: Cargo.toml  config-schema.json  plugin.toml
plugins/ai-prompt-guard/src/: lib.rs
plugins/ai-proxy/: Cargo.toml  config-schema.json  plugin.toml
plugins/ai-proxy/src/: lib.rs
plugins/ai-proxy/src/protocols/: chat_completion.rs  mod.rs  models.rs  responses.rs  tools.rs
plugins/ai-proxy/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
plugins/ai-response-guard/: Cargo.toml  config-schema.json  plugin.toml
plugins/ai-response-guard/src/: lib.rs
plugins/ai-token-limit/: Cargo.toml  config-schema.json  plugin.toml
plugins/ai-token-limit/src/: lib.rs
plugins/cel/: Cargo.toml  config-schema.json  plugin.toml
plugins/cel/src/: lib.rs
plugins/http-upstream/: Cargo.toml  config-schema.json  http-upstream.wasm  plugin.toml
plugins/http-upstream/src/: lib.rs
plugins/ip-restriction/: Cargo.toml  config-schema.json  plugin.toml
plugins/ip-restriction/src/: lib.rs
plugins/oauth2-auth/: Cargo.toml  config-schema.json  oauth2-auth.wasm  plugin.toml
plugins/oauth2-auth/src/: lib.rs
plugins/oidc-auth/: Cargo.toml  config-schema.json  plugin.toml
plugins/oidc-auth/src/: lib.rs
plugins/s3/: Cargo.toml  config-schema.json  plugin.toml  s3.wasm
plugins/s3/src/: lib.rs
plugins/sigv4/: Cargo.toml
plugins/sigv4/src/: lib.rs
tests/fixture-plugins/body-echo/: Cargo.toml  plugin.toml
tests/fixture-plugins/body-echo/src/: lib.rs
tests/fixture-plugins/streaming-echo/: Cargo.toml  plugin.toml
tests/fixture-plugins/streaming-echo/src/: lib.rs
(+325 files in other folders)
