[workspace]
members = [
    "crates/barbacane",
    "crates/barbacane-control",
    "crates/barbacane-spec-parser",
    "crates/barbacane-compiler",
    "crates/barbacane-router",
    "crates/barbacane-validator",
    "crates/barbacane-plugin-sdk",
    "crates/barbacane-plugin-macros",
    "crates/barbacane-wasm",
    "crates/barbacane-test",
]
exclude = [
    "plugins/mock",
    "plugins/lambda",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
http-body-util = "0.1"
http = "1"
bytes = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Archive
flate2 = "1"
tar = "0.4"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }

# TLS
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"

# Sync primitives
parking_lot = "0.12"

# JSON Schema validation
jsonschema = "0.26"

# WASM runtime
wasmtime = { version = "28", features = ["async", "cranelift", "pooling-allocator"] }
wasmtime-wasi = { version = "28" }

# Plugin manifest
toml = "0.8"
semver = "1"
regex-lite = "0.1"

# Concurrency
dashmap = "6"

# Logging
tracing = "0.1"

# Proc macros
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"

# Workspace crates
barbacane-spec-parser = { path = "crates/barbacane-spec-parser" }
barbacane-compiler = { path = "crates/barbacane-compiler" }
barbacane-router = { path = "crates/barbacane-router" }
barbacane-validator = { path = "crates/barbacane-validator" }
barbacane-plugin-sdk = { path = "crates/barbacane-plugin-sdk" }
barbacane-plugin-macros = { path = "crates/barbacane-plugin-macros" }
barbacane-wasm = { path = "crates/barbacane-wasm" }
barbacane-test = { path = "crates/barbacane-test" }
