[workspace]
members = [
    "crates/barbacane",
    "crates/barbacane-control",
    "crates/barbacane-spec-parser",
    "crates/barbacane-compiler",
    "crates/barbacane-router",
    "crates/barbacane-validator",
    "crates/barbacane-plugin-sdk",
    "crates/barbacane-plugin-macros",
    "crates/barbacane-wasm",
    "crates/barbacane-telemetry",
    "crates/barbacane-test",
]
exclude = [
    "plugins/mock",
    "plugins/lambda",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
http-body-util = "0.1"
http = "1"
bytes = "1.11.1"

# WebSocket
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Archive
flate2 = "1"
tar = "0.4"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "stream"] }

# TLS
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"

# Sync primitives
parking_lot = "0.12"

# JSON Schema validation
jsonschema = "0.26"

# WASM runtime
wasmtime = { version = "28", features = ["async", "cranelift", "pooling-allocator"] }
wasmtime-wasi = { version = "28" }

# Plugin manifest
toml = "0.8"
semver = "1"
regex-lite = "0.1"

# Concurrency
dashmap = "6"
futures-util = "0.3"

# Random
rand = "0.9"

# Encoding
base64-simd = "0.8"

# Logging & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "grpc-tonic"] }
prometheus-client = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }

# Web framework (control plane)
axum = { version = "0.8", features = ["multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "set-header"] }

# Database (control plane)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tempfile = "3"

# Proc macros
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Workspace crates (version required for crates.io publishing)
barbacane-spec-parser = { path = "crates/barbacane-spec-parser", version = "0.1.0" }
barbacane-compiler = { path = "crates/barbacane-compiler", version = "0.1.0" }
barbacane-router = { path = "crates/barbacane-router", version = "0.1.0" }
barbacane-validator = { path = "crates/barbacane-validator", version = "0.1.0" }
barbacane-plugin-sdk = { path = "crates/barbacane-plugin-sdk", version = "0.1.0" }
barbacane-plugin-macros = { path = "crates/barbacane-plugin-macros", version = "0.1.0" }
barbacane-wasm = { path = "crates/barbacane-wasm", version = "0.1.0" }
barbacane-telemetry = { path = "crates/barbacane-telemetry", version = "0.1.0" }
barbacane-test = { path = "crates/barbacane-test", version = "0.1.0" }
