[package]
name = "barbacane-compiler"
description = "Compiles OpenAPI/AsyncAPI specs into .bca artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
barbacane-spec-parser = { workspace = true }
barbacane-router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
