[package]
name = "barbacane-compiler"
description = "Compiles OpenAPI/AsyncAPI specs into .bca artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "compilation"
harness = false
