[package]
name = "barbacane-control"
description = "Barbacane control plane — spec compilation and management CLI"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
barbacane-compiler = { workspace = true }
barbacane-spec-parser = { workspace = true }
barbacane-telemetry = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }

# Database
sqlx = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
base64-simd = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
