[package]
name = "barbacane-plugin-sdk"
description = "SDK for building Barbacane WASM plugins (middlewares and dispatchers)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
barbacane-plugin-macros = { workspace = true }

[lints]
workspace = true
