[package]
name = "barbacane-router"
description = "Prefix-trie HTTP request router with path parameter capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "routing"
harness = false
