[package]
name = "barbacane-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Observability infrastructure for Barbacane API Gateway"

[dependencies]
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Metrics
prometheus-client = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization (for labels)
serde = { workspace = true }
serde_json = { workspace = true }
