[package]
name = "barbacane-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Observability infrastructure for Barbacane API Gateway"

[dependencies]
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Metrics
prometheus-client = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
