[package]
name = "barbacane-test"
description = "Test harnesses for Barbacane gateway and plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
barbacane-compiler = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
base64 = { workspace = true }
wiremock = "0.6"
assert_cmd = { workspace = true }
predicates = { workspace = true }

[lints]
workspace = true
