[package]
name = "barbacane-test"
description = "Test harnesses for Barbacane gateway and plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
barbacane-compiler = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
base64 = { workspace = true }
wiremock = "0.6"
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
# Used by the security suite (artifact_integrity) to rebuild a .bca archive with
# a single tampered byte. Same crates the compiler uses for the .bca format.
flate2 = { workspace = true }
tar = { workspace = true }

[lints]
workspace = true
