[package]
name = "barbacane-wasm"
description = "WASM plugin runtime for Barbacane API gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# WASM runtime
wasmtime.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Plugin manifest
toml.workspace = true
semver.workspace = true
regex-lite.workspace = true

# Concurrency
dashmap.workspace = true

# Async
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# HTTP client (for host_http_call)
reqwest.workspace = true

# NATS client (for host_nats_publish)
async-nats.workspace = true
bytes.workspace = true

# Kafka client (for host_kafka_publish)
rskafka.workspace = true

# Sync primitives (for circuit breaker)
parking_lot.workspace = true

# JSON Schema validation (for config schemas)
jsonschema.workspace = true

# Hashing (for config deduplication)
sha2.workspace = true
hex.workspace = true

# UUID generation (for host_uuid_generate)
uuid.workspace = true

# Workspace crates
barbacane-plugin-sdk.workspace = true
barbacane-telemetry.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
criterion = { workspace = true }
wat = { workspace = true }

[[bench]]
name = "wasm"
harness = false

[[bench]]
name = "serialization"
harness = false
