[package]
name = "barbacane"
description = "Barbacane data plane — spec-driven API gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
barbacane-compiler = { workspace = true }
barbacane-router = { workspace = true }
barbacane-validator = { workspace = true }
barbacane-spec-parser = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
