[package]
name = "barbacane"
description = "Barbacane data plane — spec-driven API gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "barbacane_lib"
path = "src/lib.rs"

[[bin]]
name = "barbacane"
path = "src/main.rs"

[dependencies]
barbacane-compiler = { workspace = true }
jsonschema = { workspace = true }
thiserror = { workspace = true }
barbacane-wasm = { workspace = true }
barbacane-telemetry = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
arc-swap = "1.7"
sha2 = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "routing"
harness = false

[[bench]]
name = "validation"
harness = false
