[package]
name = "barbacane-ai-prompt-guard"
version = "0.1.0"
edition = "2021"
description = "AI prompt guard middleware plugin for Barbacane API gateway — validates prompts, blocks injection patterns, injects managed system templates"
license = "AGPL-3.0-only"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
barbacane-plugin-sdk = { path = "../../crates/barbacane-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.11"

[profile.release]
opt-level = "s"
lto = true
