[package]
name = "barbacane-ai-response-guard"
version = "0.1.0"
edition = "2021"
description = "AI response guard middleware plugin for Barbacane API gateway — PII redaction and blocked-pattern detection on LLM responses"
license = "AGPL-3.0-only"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
barbacane-plugin-sdk = { path = "../../crates/barbacane-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.11"

[profile.release]
opt-level = "s"
lto = true
