[package]
name = "barbacane-ai-token-limit"
version = "0.1.0"
edition = "2021"
description = "AI token-based rate limiting middleware plugin for Barbacane API gateway"
license = "AGPL-3.0-only"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
barbacane-plugin-sdk = { path = "../../crates/barbacane-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
