[package]
name = "barbacane-cel"
version = "0.1.0"
edition = "2021"
description = "CEL policy evaluation middleware plugin for Barbacane API gateway"
license = "MIT"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
barbacane-plugin-sdk = { path = "../../crates/barbacane-plugin-sdk" }
cel-interpreter = { version = "0.10", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
