[package]
name = "barbacane-http-upstream-dispatcher"
version = "0.1.0"
edition = "2021"
description = "HTTP upstream reverse proxy dispatcher plugin for Barbacane API gateway"
license = "MIT"

# Mark as standalone crate (not part of any workspace)
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
barbacane-plugin-sdk = { path = "../../crates/barbacane-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
