[package]
name = "barbacane-oauth2-auth"
version = "0.1.0"
edition = "2021"
description = "OAuth2 token introspection middleware plugin for Barbacane API gateway"
license = "MIT"

# Mark as standalone crate (not part of any workspace)
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
barbacane-plugin-sdk = { path = "../../crates/barbacane-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
